[tool.poetry]
name = "2d-duffusion-model-from-scratch"
version = "0.1.0"
description = ""
authors = ["kwchen <kwchen@pranaq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
pyarrow = "^18.1.0"
numpy = "^2.2.1"
tqdm = "^4.67.1"
diffusers = "^0.32.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
